    (and did not) honor the write restriction bit. This limitation is
    now documented. (It is unknown if the same problem exists when
    running under BSD or OS-X).

  * S3QL now honors the setgid bit on directories (as opposed to just
    storing them).

  * The `s3qlstat` command now accepts a --raw option to inhibit
    pretty-printing of sizes.

2016-02-23, S3QL 2.16

  * S3QL now supports (and requires) Python-LLFUSE 0.43 or newer
    (but not never than 1.0).

  * S3QL now retries when receiving a "ServiceUnavailable" error from
    an S3 (or compatible) backend.

  * When retrying network requests, the back-off time now includes a
    random factor to avoid accidentally flooding the server with too
    many simultanuous requests.

  * Fixed a problem with fsck.s3ql aborting with a "ConstraintError"
    in some situations.

  * Fixed a problem with fsck.s3ql repeatedly renaming a file in
    /lost+found because it may lack data.

  * In the authinfo2 file, storage urls for the local backend may now
    be specified with a trailing slash.

2015-09-18, S3QL 2.15

  * Fixed a compatibility problem with recent versions of
    Python-LLFUSE (0.41 and newer).

  * S3QL now supports using special characters in the prefix
    for S3 buckets. Previously, characters that would need to
    be percent-encoded when part of an URL (like + or %) would
    result in a crash.

2015-07-31, S3QL 2.14

  * S3QL now longer crashes when the server sends a zero-length
    response that claims to be XML.

  * The default tcp-timeout has been increased from 10 seconds to 20
    seconds.

  * Fixed test failures when FUSE is not available, tests should now
    again be skipped.

  * S3QL now tracks the frequency of server errors and logs warnings
    if they occur more often than 5 times per second over a period of
    at least 60 seconds. Previously, retries would only be logged
    if the same request has been retried more than 3 times.
